--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 22nd of June 2024, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
+   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2025, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
 	<tr>
 	</br>
 	<tr>
@@ -73,7 +73,8 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia (P Block, level 5).			. 
+			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia (P Block, level 5). </br>
+			Friendly volunteers will be present on site. </br>
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -105,12 +106,13 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration will open soon, with instructions on how to submit your abstract for a poster presentation! </br>
-				The three top ranking abstracts will be selected for a flash talk.</br>
+				Registration is now <a href="https://www.eventbrite.com.au/e/gradients-of-brain-organization-2025-tickets-1307488947639?aff=oddtdtcreator">OPEN</a> on eventbrite! Spread the word! </br>
+				Please submit your abstracts by <u>May 25th 2025</u>: <a href="https://docs.google.com/forms/d/e/1FAIpQLSeFVtPViKqhGndk6z0KGVjDGuSzHQpGgbsE2RUIAWCebnfakQ/viewform?usp=sharing">Submit here</a>. </br>
+				The three top ranking abstracts will be selected for a flash talk. Presenters will be notified by June 8th 2025. </br>
 		  		</p>
 				</td>
 		</tr>
- </table>	
+ </table>
  
  
  <h1 id="partners">PARTNERS AND SPONSORS</h1>
