--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia (P Block, level 5). </br>
+			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia in room GP-P-514 (P Block, level 5). </br>
 			Friendly volunteers will be present on site. </br>
 			<td style="width:350px; text-align:center">
 			</p>
