--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 				<p>
 				Seok-Jun Hong PhD (Sungkyunkwan University, Korea) </br>
 				Bo-yong Park PhD (Korea University, Korea) </br>
-				Jessica Royer PsyD (McGill University, Canada) </br>
+				Jessica Royer PsyD PhD (Max Planck Institute for Human Cognitive and Brain Sciences, Germany) </br>
 				Sara Larivière PhD (Université de Sherbrooke, Canada) </br>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
+				Tamara Vanderwal MD (Universtiy of British Columbia) </br>
 				Casey Paquola PhD (INM-7, Forschungszentrum Julich, Germany) </br>
 				Boris Bernhardt PhD (McGill University, Canada) </br>
 				Elizabeth Jefferies PhD (University of York, UK) </br>
