--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 				Robert Leech PhD (Kings College London, UK) </br>
 				Daniel Margulies PhD (CNRS, France) </br>
 				Sofie Valk PhD (Max Planck Institute for Human Cognitive and Brain Sciences, Germany) </br>
+				Johan van der Meer PhD (Queensland University of Technology) </br>
+				Saurabh Sonkusare MD PhD (University of Queensland) </br>
 				</p>
 			</td>	
 		</tr>	
