the gang's back together

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain Organisation, Brisbane 2025</title>
+<title>Gradients of Brain Organisation, Bourgogne, France, 2026</title>
 <meta name="description" content="GRADIENTS WORKSHOP">
 <meta name="author" content="casey.paquola@gmail.com">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
   <div id="menu" class="menu">
   <center>
    <div id="menu" class="menu">
-    <a class="sitename" href="index.html">23|06|2025</a>
+    <a class="sitename" href="index.html">06|2026</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
@@ -41,7 +41,7 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2025, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
+   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this special pre-OHBM retreat, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
 	<tr>
 	</br>
 	<tr>
@@ -54,9 +54,7 @@
 	<td style="width:350px; text-align:center">
 			<h2>PROGRAM</h2> 
 			<p>
-			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>.
-			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
-			The zoom link for virtual attendance will be sent to you once you register (please indicate that you will only be attending the livestream)</br>
+			We are preparing a unique program for attendees. Stay tuned!</br>
 	  		</p>
 			</td>
 	</tr>
@@ -64,7 +62,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on the 23rd of June, 2025, the day before OHBM. </br>
+			The Gradient Workshop will take place over 2 days, before the main OHBM meeting. </br>
 			</p>
 			</td>
 		</tr>
@@ -73,8 +71,8 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia in room GP-P-514 (P Block, level 5). </br>
-			Friendly volunteers will be present on site. </br>
+			The workshop will be held at the beautiful <a href="https://chateaudufey.com/">Château du Feÿ</a> in Burgundy, France.</br>
+			Details on orga including registration costs, transportation, and accomodation for this unique edition of the Gradients Workshop will be released soon.</br>
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -109,9 +107,9 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration is now <a href="https://www.eventbrite.com.au/e/gradients-of-brain-organization-2025-tickets-1307488947639?aff=oddtdtcreator">OPEN</a> on eventbrite! Spread the word! </br>
-				Please submit your abstracts by <u>May 30th 2025</u>: <a href="https://docs.google.com/forms/d/e/1FAIpQLSeFVtPViKqhGndk6z0KGVjDGuSzHQpGgbsE2RUIAWCebnfakQ/viewform?usp=sharing">Submit here</a>. </br>
-				The three top ranking abstracts will be selected for a flash talk. Presenters will be notified by June 8th 2025. </br>
+				Registration will open early 2026. </br>
+				As usual, we are happy to receive your abstracts for our poster session and featured flash talks. </br>
+				Stay tuned for all details to come! </br>
 		  		</p>
 				</td>
 		</tr>
