Added save the date section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a class="sitename" href="index.html">06|2026</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
+	  <li><a href="#savethedate">SAVE THE DATE</a></li>
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#workshop">THE WORKSHOP</a></li>
       <li><a href="#register">REGISTRATION AND ABSTRACTS</a></li>
@@ -40,6 +41,19 @@
 
 <section class="some-related-articles">
   <center>
+  <h1 id="savethedate">SAVE THE DATE</h1>
+   <p> June 9-11, 2025</br>
+	<tr>
+	</br>
+	<tr>
+	<a href="https://chateaudufey.com/">Château du Feÿ</a>, Burgundy, France</br>
+	<tr>
+	</br>
+	<tr>	
+	Registration and program information will be available soon.</br>
+	<tr>
+	</br>	
+   </p>
   <h1 id="about">ABOUT</h1>
    <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this special pre-OHBM retreat, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
 	<tr>
